terminando el maquetado pro

--- a/src/components/GitHubUser/GitHubUser.css
+++ b/src/components/GitHubUser/GitHubUser.css
@@ -10,3 +10,7 @@ p {
     text-decoration: underline !important;
     color: var(--bs-primary) !important;
 }
+
+.user-social i {
+    color: var(--bs-gray);
+}
